Fix horizontal scroller

--- a/app.css
+++ b/app.css
@@ -1,12 +1,13 @@
 /* Süha Tanrıverdi. September, 2023 */
 html {
     min-height: 100vh;
-    min-width: 100vw;
+    /* min-width: 100vw; */
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 300;
     text-align: justify;
     font-size: 1.15rem;
     scroll-behavior: smooth;
+    user-select: none;
 }
 
 input,
